--- a/boostrap project/aot.html
+++ b/boostrap project/aot.html
@@ -104,7 +104,7 @@
             လူတစ်ယောက်ကဘယ်လိုအောင်မြင်မှုရသလဲ.. အမှားအမှန်ဘယ်လိုဆုံးဖြတ်မလဲ..ဒွိဟဖြစ်နေတဲ့အချိန်မှာ ဘယ်လိုဆုံးဖြတ်ချက်မျိုးချသင့်သလဲ.. ကိုယ်လုံးဝယုံကြည်
             ထားတဲ့သူတွေကရော မိတ်ဆွေအစစ်ဟုတ်သလား..
             ပြထားတာတကယ်ကိုထိရောက်ပါတယ်</p>
-            <h4 class="loe text-secondary">1500 ks</h4>
+            <h4 class="loe">1500 ks</h4>
         <a href="../image/ilide.info-shingeki-no-kyojin-attack-on-titan-vol-1-pr_7d710a1294116ff8a5e747fecbeef0bd.pdf" download class=" btn btn-outline-danger buye">Buy it</a>
         </div>
     </div>
